# croppa

./: .gitignore  LICENSE  README.md  croppa.py  croppa.spec  pyproject.toml
