[project]
name = "croppa"
version = "1.0.0"
description = "Split dual-page PDF spreads into sequential single pages."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Devcon324" },
]
keywords = ["pdf", "crop", "split", "spreads"]
dependencies = [
    "pypdf2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Devcon324/croppa"
Repository = "https://github.com/Devcon324/croppa"
Issues = "https://github.com/Devcon324/croppa/issues"

[project.scripts]
croppa = "croppa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["croppa.py"]

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]
